# vlt-cli

./: .gitignore  GEMINI.md  QUICKSTART.md  README.md  debug_threads.py  pyproject.toml  requirements.txt
specs/001-vault-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vault-cli/checklists/: requirements.md
specs/001-vault-cli/contracts/: interfaces.md
src/vlt/: config.py  db.py  main.py
src/vlt/core/: identity.py  interfaces.py  librarian.py  migrations.py  models.py  service.py  vector.py
src/vlt/lib/: llm.py
