[project]
name = "vlt-cli"
version = "0.1.0"
description = "A CLI tool for agent thought management"
authors = [{name = "Wolfe", email = "wolfe@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "alembic>=1.13.0"
]

[project.scripts]
vlt = "vlt.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vlt"]

